ci: テストカバレッジ生成とHTMLレポートをCIに追加

--- a/.github/workflows/flutter_test.yml
+++ b/.github/workflows/flutter_test.yml
@@ -34,5 +34,17 @@ jobs:
             - name: Analyze
               run: flutter analyze
 
-            - name: Run test
-              run: flutter test
+            - name: Run test (with coverage)
+              run: flutter test --coverage
+
+            - name: Install lcov
+              run: sudo apt-get update && sudo apt-get install -y lcov
+
+            - name: Generate HTML coverage
+              run: genhtml coverage/lcov.info -o coverage/html
+
+            - name: Upload coverage HTML
+              uses: actions/upload-artifact@v4
+              with:
+                name: coverage-html
+                path: coverage/html
